devops/k8s/apc/production/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: iknito-workflow-production
  labels:
    name: iknito-workflow-production
