devops/k8s/apc/production/patches.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iknito-camunda
  labels:
    app: iknito-camunda
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: iknito-camunda
        resources:
          requests:
            memory: "3Gi"
            cpu: "1000m"
          limits:
            memory: "4Gi"
            cpu: "3000m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iknito-smartfund
  labels:
    app: iknito-smartfund
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: iknito-smartfund
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "3.5Gi"
            cpu: "1500m"
